# qube-machine-report

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX_PROJECT.md  Cargo.toml  HUMAN_CHANGELOG.md  INVESTIGATION_REPORT.md  LICENSE  MASTER_PLAN.md  README.md  RUST_REWRITE_FEASIBILITY.md  TESTING.md  build.rs  install.sh  install_mac.command  machine_report.sh  package.json
.agents/skills/release/: SKILL.md
.claude/hooks/: edit-time-reminder.ps1
.claude/skills/: ATTRIBUTION.md
.claude/skills/architecture/: SKILL.md
.claude/skills/critical-thinking/: SKILL.md
.claude/skills/critical-thinking/references/: cognitive-scaffolds.md  contemplating.md  decision-making.md  design.md  devils-advocacy.md  problem-solving.md  working-canvas.md
.claude/skills/critical-thinking/references/visual-models/: causality.md  comparison.md  probability.md  structure.md
.claude/skills/release/: SKILL.md
.claude/skills/tr300-changelog/: SKILL.md
.claude/skills/tr300-dev-workflow/: SKILL.md
.claude/skills/windows-accuracy/: SKILL.md
.claude/skills/windows-distribution-and-update/: SKILL.md
.claude/skills/windows-install/: SKILL.md
.codex/: config.toml
.firecrawl/: polyform-nc-1.0.0.md
.github/workflows/: ci.yml  crates-publish.yml  macos-installer.yml  npm-publish.yml  release.yml  seal-apple-secrets-for-sd300.yml  windows-installer-validation.yml  windows-installers.yml
.tasks/: .board-version.json  CLAUDE.md  MILESTONES.md  TASKS.md  board-config.js  board-server.mjs  config.json
.tasks/memory/: glossary.md
.tasks/milestones/: hw4.md  v41.md
.tasks/tasks/: amd.md  c8r.md  mic1.md  nd372.md  pi4.md  pkg42.md  rau.md  rsh.md  w413.md  w422.md  win.md
TR200-OLD/: CLAUDE.md  install_linux.sh  package.json
TR200-OLD/.firecrawl/: upstream-machine_report.md  upstream-readme.md
TR200-OLD/WINDOWS/: Unix Shell to PowerShell Conversion Guide.md  build_tr200_exe.ps1
TR200-OLD/tools/: package_release.sh
WINDOWS/: README_WINDOWS.md  TR-100-MachineReport.ps1  TR-200-MachineReport.ps1  install_windows.ps1  unix_linux shell scripts_files -&gt; converted to.md
docs/: architecture-decisions.md
docs/agents/handoff/: 2026-07-14-001-macos-hardening-alienware-continuation.md  2026-07-14-002-v4-release-and-personal-fleet-continuation.md
docs/thinking/: 2026-07-14-tr300-v4-release-reliability.md
inno/: corporate.iss  global.iss  remove-conflicting-msi.pas
man/: tr300.1
scripts/: build-sign-notarize-macos-dmg.sh  build-sign-notarize-macos-installer.sh  sign-notarize-macos.sh  test-managed-installer-transaction.ps1  test-managed-installer-transaction.sh  verify-apple-installer-identity.sh
scripts/managed-installers/: tr300-installer.ps1  tr300-installer.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  migrate.rs  report.rs  update.rs
src/collectors/: command.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  os.rs  session.rs
src/collectors/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/install/: mod.rs  prompt.rs  shared.rs  unix.rs  windows.rs
src/render/: bar.rs  mod.rs  table.rs
tests/: integration.rs
tools/: package_release.sh
wix/: corporate.wxs  main.wxs
wix-corporate/: corporate.wxs
