[package]
name = "tr300"
version = "3.15.0"
edition = "2021"
# MSRV: __cpuid was reclassified as safe-to-call in Rust 1.95.0; we drop the
# unsafe wrappers in collectors/cpu.rs and platform/windows.rs accordingly.
# Earlier toolchains will hit E0133 ("call to unsafe function").
rust-version = "1.95"
authors = ["Emmett S <hey@emmetts.dev>"]
description = "Cross-platform system information report"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/QubeTX/qube-machine-report"
keywords = ["cli", "system", "sysinfo", "report", "cross-platform"]
categories = ["command-line-utilities"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/build.rs",
    "/man/**",
    "/src/**",
    "/tests/**",
    "/wix/**",
]

[package.metadata.wix]
upgrade-guid = "5CD540A8-AD16-4B0F-8CE4-51FF641DE181"
path-guid = "0F93D599-44AD-4377-96FE-25B5C9EA3078"
license = false
eula = false

[[bin]]
name = "tr300"
path = "src/main.rs"

[dependencies]
sysinfo = "0.32"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
thiserror = "2.0"
dirs = "5.0"
chrono = "0.4"
unicode-width = "0.2"
ureq = { version = "2", features = ["tls", "json"] }
serde_json = "1"

[build-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_mangen = "0.2"

[target.'cfg(windows)'.dependencies]
wmi = "0.14"
serde = { version = "1", features = ["derive"] }
winapi = { version = "0.3", features = ["consoleapi", "wincon", "sysinfoapi", "winuser", "winnls", "iphlpapi", "ws2def", "ws2ipdef", "winerror", "inaddr", "in6addr", "ifdef", "winbase", "errhandlingapi", "winnt", "tlhelp32", "processthreadsapi", "handleapi"] }
# Used by src/update.rs::read_install_source_marker() to read the
# HKCU\Software\TR300\InstallSource value written by the four first-class
# Windows installers (v3.15.0+). Raw winapi for one registry read would be
# ~30 lines of unsafe; winreg keeps it to ~5 lines of safe Rust.
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
# `uzers` is the maintained fork of the abandoned `users` crate.
# Pinning here clears RUSTSEC-2025-0040 / 2023-0040 / 2023-0059.
uzers = "0.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# release.yml intentionally keeps a tiny post-dist alias step for v3.14.2 updater compatibility.
allow-dirty = ["ci"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to publish prereleases to package managers
publish-prereleases = false
